--- a/app/views/404.jade
+++ b/app/views/404.jade
@@ -8,6 +8,5 @@ block main
 block content
   #error-message-box
     #error-stack-trace
-      pre
-        code!= error
+      pre something went wrong 404
 
