--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -3,7 +3,7 @@ header#header
   .navbar.navbar-fixed-top(role='navigation')
     .navbar-inner
       .container
-        a.brand(href='/') Node.js Express Mongoose Demo
+        a.brand(href='/') CroudLending
         .nav-collapse.collapse
           ul.nav
             li
@@ -11,7 +11,8 @@ header#header
             li
               a(href="/articles/new", title="new article") New
             li
-              a(href="https://github.com/madhums/nodejs-express-mongoose-demo", title="fork me on github") FORK ME ON GITHUB
+              a(href="/circles/new", title="new circle") New Circle              
+
           ul.nav.pull-right
             if (req.isAuthenticated())
               li
