--- a/app/views/circles/show.jade
+++ b/app/views/circles/show.jade
@@ -6,8 +6,9 @@ block main
 block content
   .row
     .span9
-      p=circle.title
-      p=circle.amount
-      p=circle.period
+      p title : #{circle.title}
+      p amount : #{circle.amount}        
+      p period : #{circle.period}        
       p Users :
-  button.btn.btn-small  invite friend to your circle 
+      
+  button.btn.btn-small  add members to your circle 
